Update Home Page (75%)

--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -191,5 +191,96 @@ block content
                     a(href="#").col-9.book-title - Ta Muốn Làm Thiên Đao
                     .col-3.chapter Chương 285
         #sidebar.col-4
-                
-        
+            .col-12.bg-light.border.category-list
+                .row.category-list-title.border-bottom
+                    .col-12.category-list-title
+                        h5 CÁC THỂ LOẠI
+                .row.category-list-content.border-bottom
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#") 
+                            i.fas.fa-tags 
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#")
+                            i.fas.fa-tags
+                            span.category-title  Data 1
+            .col-12.bg-light.border.category-list.mt-2
+                .row.category-list-title.border-bottom
+                    .col-12.category-list-title
+                        h5 TRUYỆN HAY
+                .row.category-list-content.border-bottom
+                    .col-6.category-title.mb-1.mt-1
+                        a(href="#") Data 1        
+                    
