--- a/views/templates/home.template.pug
+++ b/views/templates/home.template.pug
@@ -45,15 +45,15 @@ html(lang="en")
                         p.text-light.mt-4 Quý bạn đọc có thể ủng hộ website bằng cách giới thiệu đến bạn bè, chúc bạn có những giây phút đọc truyện thư giãn thật bổ ích.
                     .col-4.text-center.text-light
                         p.mt-4 Kết nối với chúng tôi:
-                        a(href="http://")
+                        a(href="#")
                             i.connect-icon.fab.fa-facebook.ml-1.mr-1
-                        a(href="http://")
+                        a(href="#")
                             i.connect-icon.fab.fa-instagram.ml-1.mr-1
-                        a(href="http://")
+                        a(href="#")
                             i.connect-icon.fab.fa-twitter-square.ml-1.mr-1
-                        a(href="http://")
+                        a(href="#")
                             i.connect-icon.fab.fa-google-plus-square.ml-1.mr-1
-                .col-md-3.col-sm-6.col-12
+                .col-12
                     p.text-light.text-center.mb-0 © 2020 Khosach, Nonprofit Organization.
         script(src="js/style.js")
         script(src="https://code.jquery.com/jquery-3.4.1.slim.min.js")
