update home page (100%)

--- a/views/templates/home.template.pug
+++ b/views/templates/home.template.pug
@@ -36,7 +36,8 @@ html(lang="en")
         #main.container
             .alert.alert-info.mb-2(role="alert")
                 h6.text-center Website vẫn đang trong giai đoạn phát triển và hoàn thiện!!!
-            block content
+            .row.main-container
+                block content
         #footer.container-fluid.mt-2
             .container
                 .row
