--- a/views/templates/home.template.pug
+++ b/views/templates/home.template.pug
@@ -38,7 +38,7 @@ html(lang="en")
                                 i.fas.fa-search
         #main.container
             .alert.alert-info.mb-2(role="alert")
-                h6.text-center Website vẫn đang trong giai đoạn phát triển và hoàn thiện!!!
+                p.text-center.mb-0 Website vẫn đang trong giai đoạn phát triển và hoàn thiện!!!
             .row.main-container
                 block content
                 #sidebar.col-md-4.col-12
@@ -49,83 +49,83 @@ html(lang="en")
                         .row.category-list-content.border-bottom
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#") 
-                                    i.fas.fa-tags 
+                                    i.fas.fa-tags.text-info 
                                     span.category-title  Data 1
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info 
                                     span.category-title  Data 2
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info 
                                     span.category-title  Data 3
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 4
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 5
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 6
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 7
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 8
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 9
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 10
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 11
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 12
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 13
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 14
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 15
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 16
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 17
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 18
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 19
                             .col-6.category-title.mb-1.mt-1
                                 a(href="#")
-                                    i.fas.fa-tags
+                                    i.fas.fa-tags.text-info
                                     span.category-title  Data 20
                     .col-12.bg-light.border.category-list.mt-2
                         .row.category-list-title.border-bottom
@@ -139,7 +139,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.top-two.mb-1.mt-1
+                            .col-2.top-number.top-two
                                 lable 2       
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -147,7 +147,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.top-three.mb-1.mt-1
+                            .col-2.top-number.top-three
                                 lable 3       
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -155,7 +155,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.mb-1.mt-1
+                            .col-2.top-number
                                 lable 4       
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -163,7 +163,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.mb-1.mt-1
+                            .col-2.top-number
                                 lable 5       
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -171,7 +171,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.mb-1.mt-1
+                            .col-2.top-number
                                 lable 6       
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -179,7 +179,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.mb-1.mt-1
+                            .col-2.top-number
                                 lable 7       
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -187,7 +187,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.mb-1.mt-1
+                            .col-2.top-number
                                 lable 8       
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -195,7 +195,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.mb-1.mt-1
+                            .col-2.top-number
                                 lable 9      
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -203,7 +203,7 @@ html(lang="en")
                                     i.fas.fa-eye
                                         lable  123456789
                         .row.new-list-content
-                            .col-2.top-number.mb-1.mt-1
+                            .col-2.top-number
                                 lable 10       
                             .col-10.category-title.pt-1.pb-1
                                 a(href="#") Diễn Tinh Xuyên Vào Kịch Khổ Tình
@@ -213,10 +213,10 @@ html(lang="en")
         #footer.container-fluid.mt-2
             .container
                 .row
-                    .col-8
+                    .col-md-8.col-12
                         p.text-light.mt-4 KhoSachOnline là Website đọc sách online hoàn toàn miễn phí dành cho người Việt, với nhiều đầu sách hay và đa dạng về chủ đề được chọn lọc và đăng tải một cách kĩ lưỡng.
                         p.text-light.mt-4 Quý bạn đọc có thể ủng hộ website bằng cách giới thiệu đến bạn bè, chúc bạn có những giây phút đọc truyện thư giãn thật bổ ích.
-                    .col-4.text-center.text-light
+                    .col-md-4.col-12.text-center.text-light
                         p.mt-4 Kết nối với chúng tôi:
                         a(href="#")
                             i.connect-icon.fab.fa-facebook.ml-1.mr-1
