--- a/views/home/category.pug
+++ b/views/home/category.pug
@@ -7,99 +7,99 @@ block content
                     h5 Category 1
             .row.hot-list-content
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#") 
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail") 
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#") 
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail") 
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#") 
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail") 
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#") 
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail") 
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#") 
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail") 
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#") 
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail") 
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#") 
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail") 
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-12
