--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -9,51 +9,51 @@ block content
                     a(href="#") Xem thêm&raquo;
             .row.hot-list-content
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#") 
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail") 
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="#")
+                    a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
                     .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="#")
-                            h6.text-center Cô Vợ Hợp Đồng Của Tổng Giám Đốc
+                        a.book-title(href="/detail")
+                            h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
         .col-12.bg-light.border.new-list
@@ -62,203 +62,203 @@ block content
                     h5 SÁCH MỚI CẬP NHẬT
                 .col-5.title-right.mt-2
                     a(href="#") Xem thêm&raquo;
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
-            .row.new-list-content.pb-2.pt-2
+            .row.chapter-content
                 a(href="#").col-9.book-title 
-                    h6 - Đấu La Đại Lục: Ý Trung Nhân
+                    lable - Đấu La Đại Lục: Ý Trung Nhân
                 .col-3.chapter Chương 285
