--- a/views/home/detail.pug
+++ b/views/home/detail.pug
@@ -8,13 +8,13 @@ block content
                 h5 Machine Learning Cơ Bản
                 h6 Tác giả: Vũ Hữu Tiệp
                 h6 Thể loại: 
-                    a(href="#") Công Nghệ Thông Tin
+                    a(href="/view") Công Nghệ Thông Tin
                 h6 Lượt xem: 123456789
                 .alert.alert-danger(role="alert")
                     i.fas.fa-file-download
                     lable  Tính năng Download đang trong giai đoạn phát triển!
-                a.btn.btn-danger.text-light.mr-2(href="#") Download
-                a.btn.btn-primary.text-light(href="#") Xem Online
+                a.btn.btn-danger.text-light.mr-2.mb-2(href="#") Download
+                a.btn.btn-primary.text-light.mb-2(href="/view") Xem Online
         .row.bg-light.border.ml-0.mr-0.mt-2
             .col-12.title-left.border-bottom
                 h5 GIỚI THIỆU
@@ -27,20 +27,20 @@ block content
             .col-12.title-left.border-bottom
                 h5 DANH SÁCH CHƯƠNG
             .col-12.chapter-content 
-                a(href="#") Chương 0: Lời mở đầu
+                a(href="/view") Chương 0: Lời mở đầu
             .col-12.chapter-content 
-                a(href="#") Chương 1: Tư Duy Và Tính Cách
+                a(href="/view") Chương 1: Tư Duy Và Tính Cách
             .col-12.chapter-content 
-                a(href="#") Chương 2: Ảnh Hưởng Của Tư Duy Tới Hoàn Cảnh
+                a(href="/view") Chương 2: Ảnh Hưởng Của Tư Duy Tới Hoàn Cảnh
             .col-12.chapter-content 
-                a(href="#") Chương 3: Tác Động Của Tư Duy Tới Sức Khỏe Và Cơ Thể Con Người
+                a(href="/view") Chương 3: Tác Động Của Tư Duy Tới Sức Khỏe Và Cơ Thể Con Người
             .col-12.chapter-content 
-                a(href="#") Chương 4: Tư Duy Và Mục Đích
+                a(href="/view") Chương 4: Tư Duy Và Mục Đích
             .col-12.chapter-content 
-                a(href="#") Chương 5: Nhân Tố Tư Duy Trong Thành Công
+                a(href="/view") Chương 5: Nhân Tố Tư Duy Trong Thành Công
             .col-12.chapter-content 
-                a(href="#") Chương 6: Viễn Cảnh Và Lý Tưởng
+                a(href="/view") Chương 6: Viễn Cảnh Và Lý Tưởng
             .col-12.chapter-content 
-                a(href="#") Chương 7: Sự Thanh Thản
+                a(href="/view") Chương 7: Sự Thanh Thản
 
 
