--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -4,7 +4,7 @@ block content
         .col-12.bg-light.border.hot-list.mb-2
             .row.hot-list-title.border-bottom
                 .col-7.title-left
-                    h5 SÁCH XEM NHIỀU
+                    h5 SÁCH NỔI BẬT
                 .col-5.title-right.mt-2
                     a(href="#") Xem thêm&raquo;
             .row.hot-list-content
@@ -16,6 +16,7 @@ block content
                             h6.text-center.mt-2 Machine Learning Cơ Bản
                     .position-absolute.pl-2.pr-2.count-view-group
                         i.fas.fa-eye  123456789
+                    
                 .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
                     a(href="/detail")
                         img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
