--- a/views/templates/home.template.pug
+++ b/views/templates/home.template.pug
@@ -130,7 +130,7 @@ html(lang="en")
                     .col-12.bg-light.border.category-list.mt-2
                         .row.category-list-title.border-bottom
                             .col-12.category-list-title
-                                h5 SÁCH HAY
+                                h5 SÁCH XEM NHIỀU
                         .row.new-list-content
                             .col-2.top-number.top-one 1       
                             .col-10.category-title.pt-1.pb-1
